cmake_minimum_required (VERSION 2.8) 
project (mrpd_simple_test)
enable_testing()

set (CPPUTEST_DIR "../../../../thirdparty/cpputest" )
set (SRC_DIR "../.." )
add_definitions(-DMRP_CPPUTEST)

include_directories( . "../../../common" ${CPPUTEST_DIR}/include )
file(GLOB CPPUTEST_SRC *.cpp)
file(GLOB MRPD_SRC ${SRC_DIR}/mrp.c ${SRC_DIR}/mvrp.c ${SRC_DIR}/mmrp.c ${SRC_DIR}/msrp.c "../../../common/parse.c")

if(APPLE)
  include_directories( include ${CPPUTEST_DIR}/include/Platforms/Gcc )
  add_executable (mrpd_simple_test ${MRPD_SRC} ${CPPUTEST_SRC} )
  target_link_libraries(mrpd_simple_test CppUTest CppUTestExt)
elseif(UNIX)
  include_directories( include ${CPPUTEST_DIR}/include/Platforms/Gcc )
  link_directories(${CPPUTEST_DIR}/src/CppUTest ${CPPUTEST_DIR}/src/CppUTestExt )
  add_executable (mrpd_simple_test ${MRPD_SRC} ${CPPUTEST_SRC} mrp_doubles.c)
  target_link_libraries(mrpd_simple_test CppUTest CppUTestExt)
elseif(WIN32)
  if( CMAKE_SIZEOF_VOID_P EQUAL 8 )
    link_directories($ENV{WPCAP_DIR}/Lib/x64 ${CPPUTEST_DIR}/src/CppUTest ${CPPUTEST_DIR}/src/CppUTestExt)
  elseif( CMAKE_SIZEOF_VOID_P EQUAL 4 )
    link_directories($ENV{WPCAP_DIR}/Lib ${CPPUTEST_DIR}/src/CppUTest ${CPPUTEST_DIR}/src/CppUTestExt)
  endif()

  add_definitions(-D_CRT_SECURE_NO_WARNINGS)
  include_directories( include $ENV{WPCAP_DIR}/Include ${CPPUTEST_DIR}/include/Platforms/VisualCpp )
  add_executable (mrpd_simple_test ${MRPD_SRC} ${CPPUTEST_SRC} ${SRC_DIR}/que.c mrp_doubles.c)
  target_link_libraries(mrpd_simple_test wpcap Iphlpapi Ws2_32 CppUTest CppUTestExt)
endif()

add_test( test_mrpd mrpd_simple_test -v )
